# VideoFetcher

./: .env  .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
src/plugins/: __init__.py
src/plugins/status/: __init__.py
src/plugins/video_down/: __init__.py  config.py  exception.py
src/plugins/video_down/configer/: __init__.py  config.py  data_source.py
src/plugins/video_down/getter/: __init__.py  config.py  data_source.py
src/plugins/video_down/rss/: __init__.py  config.py  data_source.py
