[tool.poetry]
name = "YoutubeFetcher"
version = "0.1.0"
description = "YoutubeFetcher"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0.a1"
nb-cli = "^0.1.0"

[nonebot.plugins]
plugins = ["nonebot_plugin_status", "nonebot_plugin_apscheduler", "src.plugins.video_down"]
plugin_dirs = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
